<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:background="@drawable/customborder">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_weight="0.11">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Login"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/textView2"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_alignStart="@+id/textView2"
                    android:hint="@string/Login" />

                <EditText
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/LoginAccueil" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Password"
                    android:id="@+id/textView4"
                    android:layout_below="@+id/textView3"
                    android:layout_alignLeft="@+id/textView3"
                    android:layout_alignStart="@+id/textView3"
                    android:hint="@string/Password" />

                <EditText
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/MdpAccueil"
                    android:layout_alignBottom="@+id/textView4"
                    android:layout_alignLeft="@+id/editText"
                    android:layout_alignStart="@+id/editText"
                    android:layout_alignRight="@+id/editText"
                    android:layout_alignEnd="@+id/editText" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Connexion"
                android:id="@+id/button"
                android:onClick="doConnect"
                android:layout_above="@+id/button6"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inscription"
            android:id="@+id/button6"
            android:onClick="doInscription"
            android:layout_above="@+id/textView5"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="98dp"
            android:layout_height="wrap_content">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Presentation"
        android:text="@string/Presentation"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Bienvenue"
        android:hint="@string/Bienvenue"
        android:text="@string/Bienvenue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
